--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -28,7 +28,7 @@ jobs:
           settings-path: ${{ github.workspace }} # location for the settings.xml file
           
       - name: Build with Maven
-        run: mvn -B package --file ./grupo2/pom.xml
+        run: mvn -B package --file ./pom.xml
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
