--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -43,7 +43,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./pf/Dockerfile
+          file: ./Dockerfile
           push: true
           tags: mmp052/pf:${{ github.sha }}
 
